mysql/hardening/cnp-ingress-mysql-stig-v-235146-audit-unused-ports-8rmwphc.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-ingress-mysql-stig-v-235146-audit-unused-ports-8rmwphc
  namespace: explorer
spec:
  description: "To block all unused ports on MySQL pod"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: mysql
      app.kubernetes.io/name: mysql
      controller-revision-hash: mysql-fbf7c789
      helm.sh/chart: mysql-9.1.2
      statefulset.kubernetes.io/pod-name: mysql-0
  ingress:
    - fromEndpoints:
      - matchLabels:
          role: frontend # Change your match labels
      toPorts:
        - ports:
            - port: "3306"
        - ports:
            - port: "33060"
